Fix Technology page resource links

--- a/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.html
+++ b/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.html
@@ -37,9 +37,8 @@
             <div class="blurb" data-html="webinar.blurb" skip="true"></div>
         </div>
     </a>
-    <hr>
     <if condition="model.allies.length">
-        <div class="ally-blurb">
+        <div id="technology-options" class="ally-blurb">
             <h2>{model.ally.heading}</h2>
             <div class="blurb-body" data-html="ally.blurb" skip="true"></div>
             <div class="ally-logo">
