Hide menu logo bar on landscape phones

--- a/src/app/components/shell/header/upper-menu/upper-menu.scss
+++ b/src/app/components/shell/header/upper-menu/upper-menu.scss
@@ -97,6 +97,10 @@
         overflow: hidden;
         width: 0;
 
+        @media (max-height: #{39em * $scale-factor}) {
+            display: none;
+        }
+
         @at-root .active#{&} {
             bottom: 0;
             left: 0;
