Add Instagram link to footer

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -58,6 +58,9 @@
             <a class="btn btn-social linkedin" href="{model.linkedinLink}" title="linkedin">
                 LinkedIn
             </a>
+            <a class="btn btn-social instagram" href="https://www.instagram.com/openstax/" title="instagram">
+                <span class="fab fa-instagram"></span>
+            </a>
         </div>
     </div>
 </div>
