key institunial partent from api and adding dash in testimonial name and changing type of institution partner values

--- a/src/app/pages/impact-dev/map/map.html
+++ b/src/app/pages/impact-dev/map/map.html
@@ -51,9 +51,10 @@
                         <label id="type_institute_txt" class="label-text">Type of Insititution</label>
                         <div class="switch-wrap">
                             <select class="switch type-institute-toggle">
-                                <option value="all">All</option>
-                                <option value="college">College</option>
-                                <option value="university">University</option>
+                                <option value="">All</option>
+                                <option value="college">College/University</option>
+                                <option value="technical">Technical/Community College</option>
+                                <option value="high school">High School</option>
                             </select>
                         </div>
                     </div>
