--- a/src/app/pages/impact-dev/map/testimonial.html
+++ b/src/app/pages/impact-dev/map/testimonial.html
@@ -8,7 +8,7 @@
                     <div class="tdl-body-desc">{model.dataArray[model.itemIndex].fields.testimonial}</div>
                 </div>
                 <div class="tdl-body-regards">
-                    <div class="tdlb-regards-name">{model.dataArray[model.itemIndex].fields.testimonial_name}</div>
+                    <div class="tdlb-regards-name">– {model.dataArray[model.itemIndex].fields.testimonial_name}</div>
                     <div class="tdlb-regards-desc">{model.dataArray[model.itemIndex].fields.testimonial_position}</div>
                 </div>
             </div>
