Dynamically load blog articles
And begin excerpt with the first `<p>`

--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -21,6 +21,7 @@
         display: flex;
         flex-flow: row wrap;
         margin-bottom: 3rem;
+        min-height: 20rem;
 
         > .article {
             margin-bottom: 0;
