Allow link text to wrap in blog articles
Also update version and remove no-longer-needed-classList CDN

--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -158,6 +158,11 @@
             @include set-font(h4);
         }
 
+        // TODO: Remove when fixed in Pattern Library
+        a {
+            display: inline;
+        }
+
         .img {
             background-position: center;
             background-repeat: no-repeat;
