--- a/src/app/pages/separatemap/separatemap.scss
+++ b/src/app/pages/separatemap/separatemap.scss
@@ -14,13 +14,26 @@
     right: 0;
     top: 0;
     width: 100%;
-
     @include width-up-to($tablet-max) {
         display: flex;
         flex-direction: column-reverse;
         height: calc(100% - 5.2rem);
         margin-top: 5.2rem;
         top: 0;
+    }
+
+    canvas {
+        @include width-up-to($tablet-max) {
+            position: unset !important;
+        }
+    }
+
+    .mapbox {
+        @include width-up-to($tablet-max) {
+            height: 0;
+            position: absolute;
+            width: 100%;
+        }
     }
 }
 
