fix mobile marker click testimonial screen issue

--- a/src/app/pages/impact-dev/map/map.html
+++ b/src/app/pages/impact-dev/map/map.html
@@ -3,6 +3,7 @@
         <div id="back-search-div" class="back-search-div"><button id="back-search-btn" class="back-search-btn"><i class="fas fa-arrow-left left-arrow-bak"></i></button></div>
         <div id="back-result-div" class="back-result-div"><button id="back-result-btn" class="back-result-btn"><i class="fas fa-arrow-left left-arrow-bak"></i></button></div>
         <div id="back-detail-div" class="back-detail-div"><button id="back-detail-btn" class="back-detail-btn"><i class="fas fa-arrow-left left-arrow-bak"></i></button></div>
+        <div id="back-detail-single-div" class="back-detail-single-div"><button id="back-detail-single-btn" class="back-detail-single-btn"><i class="fas fa-arrow-left left-arrow-bak"></i></button></div>
         <div class="search-div-container">
             <a if="model=='landing'" href="/separatemap" class="separate-map-link"><div class="search" id="search">
                 <div id="search_input_div" class="search-input-div">
