--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -159,6 +159,7 @@ $quote-orange: #f66400;
 
     .back-search-div,
     .back-result-div,
+    .back-detail-single-div,
     .back-detail-div {
         display: none;
         margin-bottom: 1rem;
@@ -167,6 +168,7 @@ $quote-orange: #f66400;
 
     .back-search-btn,
     .back-result-btn,
+    .back-detail-single-btn,
     .back-detail-btn {
         background-color: white;
         border-radius: 2.8rem;
