fixed safari filter open/close issue

--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -52,6 +52,18 @@ $quote-orange: #f66400;
             justify-content: flex-end;
             margin-bottom: 1rem;
             margin-left: unset;
+            margin-top: 2.3rem;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            width: 100%;
+        }
+
+        @include width-up-to($phone-max) {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            margin-bottom: 1rem;
+            margin-left: unset;
             margin-top: 0;
             padding-left: 1rem;
             padding-right: 1rem;
