Fix canvas position styling

--- a/src/app/pages/impact-dev/schoolmap/schoolmap.scss
+++ b/src/app/pages/impact-dev/schoolmap/schoolmap.scss
@@ -1,10 +1,10 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 .schoolmapdiv {
-    background: radial-gradient(circle, rgba(12, 214, 248, 0.35) 0%, rgba(37, 192, 218, 0) 100%);
-    background-color: rgba(255, 255, 255, 0.9);
+    background: radial-gradient(circle, rgba(0, 36, 105, 0.15) 0%, rgba(37, 192, 218, 0) 100%);
+    background-color: #e1f5f9;
 
-    @include wider-than($phone-max) {
+    @include wider-than(60rem) {
         height: 86rem;
         overflow: hidden;
     }
@@ -31,9 +31,10 @@
 .schoolmapbox {
    // background-size: 697px 348px ;
     .txthead {
-        @include set-font(h2);
-
-        color: os-color(blue);
+        color: #00347c;
+        font-size: 3.6rem;
+        font-weight: bold;
+        letter-spacing: -1.44px;
         width: 45rem;
 
         @include width-up-to($phone-max) {
@@ -44,22 +45,27 @@
     }
 
     .txtbdy {
-        @include set-font(body-large);
-
-        color: os-color(blue);
-        line-height: 2.5rem;
+        color: #00347c;
+        font-size: 1.8rem;
         padding-bottom: 2rem;
         padding-top: 2rem;
         width: 55rem;
 
         @include width-up-to($phone-max) {
+            font-size: 1.8rem;
+            line-height: 2.5rem;
             text-align: center;
             width: 32rem;
         }
     }
 
     .map-img {
-        margin-left: 3rem;
-        width: calc(100% - 6rem);
+        @include width-up-to($tablet-max) {
+            width: 60rem;
+        }
+
+        @include width-up-to($phone-max) {
+            width: 32rem;
+        }
     }
 }
