fixing arrow of i want to learn more link in schoolmap component

--- a/src/app/pages/impact-dev/map/map.html
+++ b/src/app/pages/impact-dev/map/map.html
@@ -81,7 +81,7 @@
         </div>
     </div>
     <div class="maptxt" id="maptxt">
-        we're changing the world, one book at a time!
+        We're changing the world, one book at a time!
     </div>
 </div>
 <div id="on-map" class="on-map"></div>
