--- a/src/app/pages/impact-dev/schoolmap/schoolmap.html
+++ b/src/app/pages/impact-dev/schoolmap/schoolmap.html
@@ -7,7 +7,8 @@
                     increasing the use of open educational resources on your campus.
             </div>
             <div class="txtlink">
-                <a href="https://openstax.org/"> I want to learn more></a>
+                <span class="tlink"><a href="https://openstax.org/"> I want to learn more</a></span>
+                <span class="linkarrow"><i class="fa fa-chevron-right right-angle"></i></span>
             </div>
         </div>
         <div><img class="map-img" src="/images/home/map2.png"></div>
