--- a/src/app/pages/home/education/education.scss
+++ b/src/app/pages/home/education/education.scss
@@ -1,10 +1,10 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-$girl-breakpoint: 60rem;
+$girl-breakpoint: 60em * $scale-factor;
 $button-breakpoint: 100rem;
 
 .education {
-    @include wider-than(60rem) {
+    @include wider-than($girl-breakpoint) {
         height: 74rem;
         overflow: hidden;
         position: relative;
@@ -19,7 +19,7 @@ $button-breakpoint: 100rem;
     background-repeat: no-repeat;
     background-size: cover;
 
-    @include wider-than(60rem) {
+    @include wider-than($girl-breakpoint) {
         bottom: 0;
         height: 71rem;
         left: 0;
@@ -49,7 +49,7 @@ $button-breakpoint: 100rem;
         top: 5rem;
         width: 100%;
 
-        @include wider-than(60rem) {
+        @include wider-than($girl-breakpoint) {
             width: calc(100% - 3rem);
 
             > p {
@@ -104,7 +104,7 @@ $button-breakpoint: 100rem;
         width: 100%;
         z-index: 3;
 
-        @include wider-than(60rem) {
+        @include wider-than($girl-breakpoint) {
             bottom: 3rem;
             margin-top: 1.5rem;
         }
@@ -129,7 +129,7 @@ $button-breakpoint: 100rem;
         li {
             flex: 0 0 auto;
 
-            @include wider-than(60rem) {
+            @include wider-than($girl-breakpoint) {
                 width: 60%;
             }
 
@@ -141,7 +141,7 @@ $button-breakpoint: 100rem;
             &:first-child {
                 margin-bottom: 1.5rem;
 
-                @include wider-than(60rem) {
+                @include wider-than($girl-breakpoint) {
                     margin-bottom: 1.5rem;
                 }
 
@@ -159,7 +159,7 @@ $button-breakpoint: 100rem;
             text-transform: none;
             width: 100%;
 
-            @include wider-than(60rem) {
+            @include wider-than($girl-breakpoint) {
                 padding-left: 1.5rem;
                 padding-right: 1.5rem;
             }
@@ -189,7 +189,7 @@ $button-breakpoint: 100rem;
     .student,
     .quote,
     .links {
-        @include wider-than(60rem) {
+        @include wider-than($girl-breakpoint) {
             position: absolute;
         }
     }
