--- a/src/app/pages/impact-dev/map/schoolinfo.html
+++ b/src/app/pages/impact-dev/map/schoolinfo.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <div class="left-btn-link nxt-previous-links" data-index={model.itemIndex} data-action="previous"></div>
+    <div class="left-btn-link nxt-previous-links" data-action="previous"></div>
     <div class="content-container">
         <div class="left-column">
             <div class="left-column-inner">
@@ -20,5 +20,5 @@
         </div>
         <div if="model.dataArray[model.itemIndex].fields.testimonial!=null" id="testimonialHead-{model.itemIndex}" class="testimonial-head">Testimonials</div>
     </div>
-    <div class="right-btn-link nxt-previous-links" data-index={model.itemIndex} data-action="next"></div>
+    <div class="right-btn-link nxt-previous-links" data-action="next"></div>
 </template>
