Fix PDF link layout on Research page in Edge
Get rid of fit-content, not supported by Edge

--- a/src/app/components/get-this-title/order-print-copy/order-print-copy.scss
+++ b/src/app/components/get-this-title/order-print-copy/order-print-copy.scss
@@ -37,6 +37,7 @@
         box-sizing: border-box;
         display: grid;
         grid-gap: 2rem;
+        justify-items: center;
         padding: 2rem;
         width: 100%;
 
@@ -44,7 +45,6 @@
             grid-gap: 4rem;
             margin: auto;
             padding: 4rem;
-            width: fit-content;
 
             &.boxes-1 {
                 grid-template-columns: auto;
