--- a/src/app/pages/press/inquiries/inquiries.scss
+++ b/src/app/pages/press/inquiries/inquiries.scss
@@ -27,7 +27,7 @@
 
         display: grid;
         grid-gap: 1rem;
-        width: fit-content;
+        justify-self: start;
 
         &.primary {
             @extend %primary;
