Change CreatorFest logo
Also: fix dropdown aria text
And: fix rendering issue in subjects page book viewer

--- a/src/app/pages/details/resource-box/resource-box.html
+++ b/src/app/pages/details/resource-box/resource-box.html
@@ -4,7 +4,7 @@
             <h3>{model.heading}</h3>
             <img if="model.creatorFest"
                 title="Resource created at Creator Fest"
-                src="/images/details/cf-badge.png"
+                src="/images/details/cf-badge.svg"
             >
         </div>
         <div data-html="description"></div>
