--- a/src/app/pages/details/resource-box/resource-box.html
+++ b/src/app/pages/details/resource-box/resource-box.html
@@ -3,7 +3,7 @@
         <div class="top-line">
             <h3>{model.heading}</h3>
             <img if="model.creatorFest"
-                title="Resource created at Creator Fest"
+                title="This resource was created by instructors at Creator Fest"
                 src="/images/details/cf-badge.svg"
             >
         </div>
