Change creator fest logo (#1257)
Self-merging as Michael is out.
* Change CreatorFest logo

Also: fix dropdown aria text
And: fix rendering issue in subjects page book viewer

* Update creatorfest logo title text

* Upgrade packages

* Update Gemfile

--- a/src/app/pages/details/resource-box/resource-box.html
+++ b/src/app/pages/details/resource-box/resource-box.html
@@ -3,8 +3,8 @@
         <div class="top-line">
             <h3>{model.heading}</h3>
             <img if="model.creatorFest"
-                title="Resource created at Creator Fest"
-                src="/images/details/cf-badge.png"
+                title="This resource was created by instructors at Creator Fest"
+                src="/images/details/cf-badge.svg"
             >
         </div>
         <div data-html="description"></div>
