Revert "Change creator fest logo (#1257)"
This reverts commit a8aece6791b25e134cc82aae37d7bbd268b8d5bd.

--- a/src/app/pages/details/resource-box/resource-box.html
+++ b/src/app/pages/details/resource-box/resource-box.html
@@ -3,8 +3,8 @@
         <div class="top-line">
             <h3>{model.heading}</h3>
             <img if="model.creatorFest"
-                title="This resource was created by instructors at Creator Fest"
-                src="/images/details/cf-badge.svg"
+                title="Resource created at Creator Fest"
+                src="/images/details/cf-badge.png"
             >
         </div>
         <div data-html="description"></div>
