--- a/src/app/components/shell/header/main-menu/dropdown/dropdown.html
+++ b/src/app/components/shell/header/main-menu/dropdown/dropdown.html
@@ -11,7 +11,7 @@
         <nav class="dropdown-menu"
          role="menu"
          aria-expanded="{model.isOpen}"
-         aria-label="{`${model.dropdownLabel} menu`}">
+         aria-label="Subjects menu">
             <div  each="item in model.items">
                 <a href="{item.url}"
                 role="menuitem"
