--- a/src/app/pages/details/phone-view/author-list/author-list.html
+++ b/src/app/pages/details/phone-view/author-list/author-list.html
@@ -2,13 +2,13 @@
     <if condition="model.allSenior.length || model.allNonsenior.length">
         <if condition="model.allSenior.length">
             <h4>Senior Contributing Authors</h4>
-            <div each="author in model.allSenior">
+            <div class="loc-senior-author" each="author in model.allSenior">
                 {author.name}<if condition="author.university">, {author.university}</if>
             </div>
         </if>
         <if condition="model.allNonsenior.length">
             <h4>Contributing Authors</h4>
-            <div each="author in model.allNonsenior">
+            <div class="loc-nonsenior-author" each="author in model.allNonsenior">
                 {author.name}<if condition="author.university">, {author.university}</if>
             </div>
         </if>
