--- a/src/app/pages/details/phone-view/publication-details/publication-details-polish.html
+++ b/src/app/pages/details/phone-view/publication-details/publication-details-polish.html
@@ -1,34 +1,31 @@
 <template args="model">
-    <div if="model.publish_date">
+    <div class="loc-pub-date" if="model.publish_date">
         <h4>Data publikacji</h4>
         <div id='publish-date'>{model.formattedPublishDate}</div>
     </div>
-    <div if="model.print_isbn_10 || model.print_isbn_13">
+    <div class="loc-print-isbn" if="model.print_isbn_10 || model.print_isbn_13">
         <h4>Wydrukowane</h4>
         <div>
             <div if="model.print_isbn_10">ISBN-10: {model.print_isbn_10}</div>
             <div if="model.print_isbn_13">ISBN-13: {model.print_isbn_13}</div>
         </div>
     </div>
-    <div if="model.digital_isbn_10 || model.digital_isbn_13">
+    <div class="loc-digital-isbn" if="model.digital_isbn_10 || model.digital_isbn_13">
         <h4>Wersja cyfrowa</h4>
         <div>
             <div if="model.digital_isbn_10">ISBN-10: {model.digital_isbn_10}</div>
             <div if="model.digital_isbn_13">ISBN-13: {model.digital_isbn_13}</div>
         </div>
     </div>
-    <div if="model.ibook_isbn_10 || model.ibook_isbn_10">
-        <h4>iBooks
-            <span if="model.ibook_volume_2_isbn_10 || model.ibook_volume_2_isbn_13">
-                Part 1
-            </span>
+    <div class="loc-ibook-isbn" if="model.ibook_isbn_10 || model.ibook_isbn_10">
+        <h4>iBooks<span if="model.ibook_volume_2_isbn_10 || model.ibook_volume_2_isbn_13">&nbsp;Part 1</span>
         </h4>
         <div>
             <div if="model.ibook_isbn_10">ISBN-10: {model.ibook_isbn_10}</div>
             <div if="model.ibook_isbn_13">ISBN-13: {model.ibook_isbn_13}</div>
         </div>
     </div>
-    <div if="model.ibook_volume_2_isbn_10 || model.ibook_volume_2_isbn_13">
+    <div class="loc-ibook-isbn" if="model.ibook_volume_2_isbn_10 || model.ibook_volume_2_isbn_13">
         <h4>iBooks Part 2</h4>
         <div>
             <div if="model.ibook_isbn_10">ISBN-10: {model.ibook_volume_2_isbn_10}</div>
